<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculadora</string>
    <string name="action_settings">Settings</string>
    <string name="numero1">Primer Numero:</string>
    <string name="numero2">Segundo Numero:</string>
    <string name="botonSuma">+</string>
    <string name="botonResta">-</string>
    <string name="botonMultiplicacion">x</string>
    <string name="botonDivision">/</string><string name="botonExponente">X^</string>
    
    <string name="botonLimpiar">CE</string>
    <string name="resultado">Resultado</string>

</resources>
